Added rich embed

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <title>Fan CSS</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="Fan CSS" />
+    <meta property="og:description" content="A simple animated fan built using HTML and CSS." />
+    <meta property="og:image" content="https://yourdomain.com/preview.png" />
+    <meta property="og:url" content="https://angiemiku.github.io/fan-css/" />
+    <meta property="og:type" content="website" />
+
     <link rel="stylesheet" href="style.css">
   </head>
 
