--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
     <meta property="og:title" content="Fan CSS" />
     <meta property="og:description" content="A simple animated fan built using HTML and CSS." />
-    <meta property="og:image" content="https://cdn.discordapp.com/icons/1039145788569305088/b7243d7089e571c12949f462340287c9.png" />
+    <meta property="og:image" content="https://i.postimg.cc/7Z7MW8cc/2bea65889be8574ad27516762c030621.jpg" />
     <meta property="og:url" content="https://angiemiku.github.io/fan-css/" />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Fan CSS" />
 
     <link rel="stylesheet" href="style.css">
   </head>
