--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta property="og:description" content="A simple animated fan built using HTML and CSS." />
     <meta property="og:image" content="https://i.postimg.cc/7Z7MW8cc/2bea65889be8574ad27516762c030621.jpg" />
     <meta property="og:url" content="https://angiemiku.github.io/fan-css/" />
-    <meta property="og:type" content="website" />
-      
-    <meta name="twitter:card" content="summary" />
+    <meta content="#96FFEE" data-react-helmet="true" name="theme-color" />
+    <!-- <meta property="og:type" content="website" /> -->
+
+    <meta name="twitter:card" content="summary_large_image">
+    <!-- <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fan CSS" />
     <meta name="twitter:description" content="A simple animated fan built using HTML and CSS." />
     <meta name="twitter:image" content="https://i.postimg.cc/7Z7MW8cc/2bea65889be8574ad27516762c030621.jpg" />
-    <meta name="twitter:url" content="https://angiemiku.github.io/fan-css/" />
+    <meta name="twitter:url" content="https://angiemiku.github.io/fan-css/" /> -->
 
     <link rel="stylesheet" href="style.css">
   </head>
